--- a/HackFlix/package.json
+++ b/HackFlix/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
